<resources>

    <string name="app_name">VS_siwehrli_REST</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_main">REST</string>
    <string name="introduction_text">Obtain temperature information by...</string>
    <string name="hand_made">hand-made</string>
    <string name="library_made">library</string>
    <string name="json_made">json</string>
    <string name="json_label">Value extracted from JSON response:</string>
    <string name="no_value_set">-</string>
    <string name="title_activity_chart">Charts</string>
    <string name="chart_link">Display sensor charts</string>
    <string name="request">request</string>
    <string name="spot1">Spot 1</string>
    <string name="image_view_description">Displays the chart generated by google chart tool</string>
    <string name="toggle_button_name">switch on/off</string>

</resources>